welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:1: error: expected start of definition
override def run() {
         ^SnakeBuggle:22: error: Missing closing brace `}' assumed here
  }
  ^